@@ -93,9 +93,10 @@ export(orthogonalProjection)
 export(orthogonalRectanlge)
 export(orthogonalRectanlgePDF)
 export(oxfordWeather)
+export(partitionEvenString)
 export(partitionFatalities)
+export(partitionOddString)
 export(partitionRoadEndpoints)
-export(partitionStringGraph)
 export(pdfPartitionRoadEndpoints)
 export(pearsonResiduals)
 export(pointIndex)
